style: fixed search bar on mobile

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -23,3 +23,13 @@
     padding-inline-end: 1rem;
   }
 }
+
+@media (max-width: 700px) {
+  .search-bar {
+    width: 100%;
+    background-color: hsl(from var(--clr-neutral-000) h s l / 0.2);
+    input {
+      font-size: var(--fs-normal);
+    }
+  }
+}
